# prism

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  README_pt-BR.md  SECURITY.md  build.gradle  flake.nix  gradle.properties  out  pyproject.toml  pytest.ini  rewrite-init.gradle  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-android.yml  build-docs.yml  build-emscripten.yml  build-gdextension.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-sdist.yml  build-tvos.yml  build-visionos.yml  build-watchos.yml  build-wheels.yml  build-windows.yml  build.yml  ci.yml  lint-android.yml  lint-emscripten.yml  lint-format.yml  lint-gdextension.yml  lint-ios.yml  lint-linux.yml  lint-macos.yml  lint-tvos.yml  lint-visionos.yml  lint-watchos.yml  lint-windows-clang-tidy.yml  lint-windows-msvc.yml  lint.yml  pypi.yml  release.yml
android/templates/cmake/: PrismConfig.cmake.in
bindings/cs/Prism.CSharp/: Methods.cs  NativeAnnotationAttribute.cs  NativeTypeNameAttribute.cs  Prism.CSharp.csproj  PrismBackend.cs  PrismConfig.cs  PrismContext.cs  PrismError.cs
bindings/dotnet/: Prism.Net.slnx  README.md
bindings/dotnet/Prism.Demo/: Prism.Demo.csproj  Program.cs
bindings/dotnet/Prism.Net/: IPrismBackend.cs  Prism.Net.csproj  PrismBackend.cs  PrismBackendInfo.cs  PrismContext.cs  PrismException.cs  PrismVoice.cs  README.md
bindings/dotnet/Prism.Net/Native/: Methods.cs  NativeAnnotationAttribute.cs  NativeTypeNameAttribute.cs  PrismBackend.cs  PrismConfig.cs  PrismContext.cs  PrismError.cs
bindings/dotnet/scripts/: PrepareNative.cs
bindings/java/prism/: settings.gradle.kts
bindings/py/prism/prism/: __init__.py  _dispatch.py  _native.py  common.py  core.py  custom.py  lib.py  log.py
bindings/rust/prism-sys/: Cargo.toml  build.rs
cmake/: PrismBackends.cmake  PrismCodegen.cmake  PrismDeps.cmake  PrismFacts.cmake  PrismGuards.cmake  PrismInstall.cmake  PrismLinting.cmake  PrismOptions.cmake  PrismPlatformAndroid.cmake  PrismPlatformApple.cmake  PrismPlatformEmscripten.cmake  PrismPlatformUnix.cmake  PrismPlatformWindows.cmake  PrismRulesetTemplate.ruleset.in  PrismTargets.cmake  PrismWarnings.cmake  prism-config.cmake.in
cmake/modules/: FindNVDAController.cmake
defs/: boy_pc_reader.def  boy_pc_reader32.def  pc_talker.def  pc_talker32.def  zdsr.def  zdsr32.def
demos/: CMakeLists.txt  backend_enumeration_demo.cpp  orca_demo.cpp  piper_tts_custom_backend_demo.py  speechd_demo.cpp  uia_backend_demo.cpp  uia_test.py
doc/src/: SUMMARY.md
doc/src/api/: audio-format.md  backend-enumeration.md  backend-functions.md  backend-identifiers.md  backend-notes.md  context-management.md  conventions.md  custom-backends.md  error-codes.md  logging.md  overview.md  registry-functions.md  shared-library-backends.md  thread-safety.md  voice-parameters.md  voice-selection.md
gdextension/: CMakeLists.txt
gdextension/project/: example.gd
gdextension/src/: godot_prism_backend.cpp  godot_prism_backend.h  godot_prism_context.cpp  godot_prism_context.h  register_types.cpp
idl/: nvdaController.acf  nvdaController.idl  tts_backend.djinni
include/: prism.h
shims/: CMakeLists.txt
shims/tolk/: CMakeLists.txt  lock.c  lock.h  simdutf.cpp  simdutf.h  thread_safety.h  tolk.c  tolk.cpp  tolk.h  unicode.h
shims/universalspeech/: universalspeech.h
source/: AndroidManifest.xml  backend.h  backend_catalog.cpp  backend_catalog.h  backend_check.cpp  backend_enumerator.cpp  backend_enumerator.h  delayimp.c  delayimp.cpp  frozen_registry.cpp  frozen_registry.h  logging.cpp  logging.h  plugin_loader.cpp  plugin_loader.h  poll_waiter.cpp  poll_waiter.h  power_notifier.cpp  power_notifier.h  prism.cpp  simdutf.cpp  simdutf.h  utils.cpp
source/backends/: android_screen_reader.cpp  android_tts.cpp  avspeech.cpp  backend.h  backend_registry.cpp  backend_registry.h  boy_pc_reader.cpp  custom_backend.cpp  frozen_registry.cpp  frozen_registry.h  jaws.cpp  nvda.cpp  onecore.cpp  orca.cpp  pc_talker.cpp  sapi.cpp  sense_reader.cpp  speech_dispatcher.cpp  spiel.cpp  system_access.cpp  uia.cpp  utils.cpp  utils.h  voiceover.cpp  web_speech_synthesis_backend.cpp  window_eyes.cpp  zdsr.cpp  zoom_text.cpp
source/backends/android/: AbstractTextToSpeechBackend.hpp  AbstractTextToSpeechBackend.java  AndroidScreenReaderBackend.java  AndroidTextToSpeechBackend.java  AudioCallback.hpp  AudioCallback.java  BackendError.hpp  BackendError.java  BackendFeatures.hpp  BackendFeatures.java  TextToSpeechBackend.java  Unit.java
source/backends/android/jni/: AbstractTextToSpeechBackend.cpp  AbstractTextToSpeechBackend.hpp  AudioCallback.cpp  AudioCallback.hpp  BackendError.hpp  BackendFeatures.hpp  TtsBackendModule.cpp  Unit.cpp  Unit.hpp
source/backends/java/: AbstractTextToSpeechBackend.hpp  AbstractTextToSpeechBackend.java  AndroidScreenReaderBackend.java  AndroidTextToSpeechBackend.java  AudioCallback.hpp  AudioCallback.java  BackendError.java  PrismContext.java  PrismInitProvider.java  TextChunker.java  TextToSpeechBackend.java  TtsBackendModule.java  Unit.java  utils.java
source/backends/moderncom/: interfaces.h
source/backends/raw/: avspeech.swift  boy_pc_reader.h  orca-module.c  orca-module.h  orca-service.c  orca-service.h  pc_talker.h  sapibridge.c  sapibridge.h  voiceover_ios.swift  voiceover_macos.swift  zdsr.h  zt.h
tests/: CMakeLists.txt  test_backend_audio.cpp  test_backend_controls.cpp  test_backend_lifecycle.cpp  test_backend_speech.cpp  test_backend_voices.cpp  test_context.cpp  test_error_handling.cpp  test_helpers.h  test_registry.cpp
tests/android/simple-app/: build.gradle
tools/: build-emscripten.sh  build-linux.sh  gdextension-fixname.sh  gdextension-native.sh  gdextension-nix.sh  generate_cffi.py  lint-emscripten.sh  lint-linux.sh  package-emscripten.sh  package-linux.sh
winelibs/: .clang-tidy  CMakeLists.txt
winelibs/cmake/: PrismWinelib.cmake
winelibs/orca/: CMakeLists.txt  bridge.c  bridge.h
winelibs/speechd/: bridge.cpp  bridge.h
(+14 files in other folders)
